{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "da0a48d0-c7da-4ea9-bf0b-eba4ae66e247",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "9e11abdc-d19e-4507-a6a2-8d6b0e83cea5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "56bd6b65-1488-4ba9-b9cf-d816731c4ecf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "316b5b2b-fcd9-46fb-9fbf-3f9e2d14adae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee4a28c0-1ce0-45f2-b3c0-67fd73856d5d",
                    "path": "<Touchscreen>/primaryTouch/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c24c621-c3ea-4237-9e91-28ba8c1c7162",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42651fa7-ed27-4fab-b28b-d114adb427f4",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}